[project]
name = "jahs_bench"
version = "v1.1.0"
description = "The first collection of surrogate benchmarks for Joint Architecture and Hyperparameter Search."
authors = [
    { name = "Archit Bansal", email = "bansala@cs.uni-freiburg.de" },
    { name = "Danny Stoll", email = "stolld@cs.uni-freiburg.de" },
    { name = "Maciej Janowski", email = "janowski@cs.uni-freiburg.de" },
    { name = "Arber Zela", email = "zelaa@cs.uni-freiburg.de" },
    { name = "Frank Hutter", email = "fh@cs.uni-freiburg.de" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "Joint Architecture and Hyperparameter Search",
    "Neural Architecture Search",
    "Hyperparameter Optimization",
    "Benchmark",
    "Deep Learning",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24,<2",
    "pandas>2",
    "xgboost~=1.5.0",
    "ConfigSpace~=0.4.0",
    "joblib>=1.2,<2",
    "scikit-learn>=1.4,<2",
    "yacs~=0.1.8",
    "requests>=2.28.0,<3",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
data_creation = [
    "torch>=1.10,<2",
    "networkx>=2.6,<3",
    "grakel>=0.1,<0.2",
    "torchvision>=0.11,<0.12",
    "fvcore>=0.1,<0.2",
    "tensorboard>=2.6,<3",
    "termcolor>=1.1.0,<2",
    "psutil>=5,<6",
]

[project.urls]
Homepage = "https://github.com/automl/jahs_bench"
Repository = "https://github.com/automl/jahs_bench"
Documentation = "https://automl.github.io/jahs_bench/"

[dependency-groups]
dev = [
    "pre-commit>=2.10,<3",
    "mypy>=0.930,<0.931",
    "mkdocs-material>=8.1.3,<9",
]

[tool.uv.build-backend]
module-name = "jahs_bench"
module-root = ""
namespace = true

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.black]
line-length = 90
target-version = ['py37']

[tool.isort]
profile = 'black'
line_length = 90

[tool.mypy]
files = ["jahs_bench"]
namespace_packages = true
follow_imports = "skip"
ignore_missing_imports = true
show_error_codes = true
incremental = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = []
ignore_errors = true

[tool.pylint.messages_control]
disable = 'all'
enable = [
    'invalid-characters-in-docstring','wrong-spelling-in-comment','wrong-spelling-in-docstring','not-in-loop',
    'function-redefined','continue-in-finally','abstract-class-instantiated','star-needs-assignment-target',
    'duplicate-argument-name','return-in-init','too-many-star-expressions','nonlocal-and-global',
    'return-outside-function','return-arg-in-generator','invalid-star-assignment-target','bad-reversed-sequence',
    'nonexistent-operator','yield-outside-function','init-is-generator','nonlocal-without-binding','lost-exception',
    'assert-on-tuple','dangerous-default-value','duplicate-key','useless-else-on-loop','expression-not-assigned',
    'confusing-with-statement','unnecessary-lambda','pointless-statement','unnecessary-pass','unreachable','eval-used',
    'exec-used','using-constant-test','deprecated-lambda','blacklisted-name','misplaced-comparison-constant',
    'singleton-comparison','unneeded-not','ßconsider-iterating-dictionary','consider-using-enumerate','empty-docstring',
    'unidiomatic-typecheck','condition-evals-to-constant','consider-using-generator','nan-comparison',
    'consider-using-min-max-builtin','consider-using-with','invalid-all-format','consider-using-dict-items',
    'deprecated-decorator','forgotten-debug-statement','unspecified-encoding','useless-with-lock',
    'use-implicit-booleaness-not-comparison','not-async-context-manager','yield-inside-async-function',
    'await-outside-async','invalid-unary-operand-type','unsupported-binary-operation','not-callable',
    'redundant-keyword-arg','assignment-from-no-return','assignment-from-none','not-context-manager',
    'repeated-keyword','missing-kwoa','no-value-for-parameter','invalid-sequence-index','invalid-slice-index',
    'unexpected-keyword-arg','unsupported-membership-test','unsubscriptable-object','bad-except-order',
    'catching-non-exception','bad-exception-context','notimplemented-raised','raising-bad-type','raising-non-exception',
    'misplaced-bare-raise','duplicate-except','nonstandard-exception','binary-op-exception','bare-except',
    'raise-missing-from','consider-using-namedtuple-or-dataclass','consider-using-tuple','bad-open-mode',
    'redundant-unittest-assert','boolean-datetime','deprecated-methodimport-error','import-self','reimported',
    'relative-import','deprecated-module','wildcard-import','misplaced-future','cyclic-import','wrong-import-position',
    'ungrouped-imports','multiple-imports','simplifiable-condition','len-as-condition',
    'unpacking-non-sequence','invalid-all-object','unbalanced-tuple-unpacking','undefined-variable',
    'undefined-all-variable','used-before-assignment','cell-var-from-loop','global-variable-undefined',
    'redefined-builtin','redefine-in-handler','unused-import','unused-argument','unused-wildcard-import',
    'unused-variable','global-variable-not-assigned','undefined-loop-variable','global-statement',
    'global-at-module-level','format-needs-mapping','truncated-format-string','missing-format-string-key',
    'mixed-format-string','too-few-format-args','bad-str-strip-call','too-many-format-args','bad-format-character',
    'format-combined-specification','bad-format-string-key','bad-format-string','missing-format-attribute',
    'missing-format-argument-key','unused-format-string-argument','unused-format-string-key','invalid-format-index',
    'f-string-without-interpolation','use-maxsplit-arg','anomalous-unicode-escape-in-string',
    'anomalous-backslash-in-string','redundant-u-string-prefix','format-string-without-interpolation',
    'simplifiable-if-statement','logging-format-truncated','logging-too-few-args','logging-too-many-args',
    'logging-unsupported-format','not-an-iterable','not-a-mapping','use-sequence-for-iteration','bad-indentation',
    'unnecessary-semicolon','missing-final-newline','mixed-line-endings','multiple-statements','trailing-newlines',
    'trailing-whitespace','unexpected-line-ending-format','superfluous-parens','access-member-before-definition',
    'method-hidden','assigning-non-slot','duplicate-bases','inconsistent-mro','inherit-non-class','invalid-slots',
    'invalid-slots-object','no-method-argument','no-self-argument','unexpected-special-method-signature',
    'non-iterator-returned','invalid-length-returned','protected-access','attribute-defined-outside-init',
    'abstract-method','bad-staticmethod-argument','non-parent-init-called','super-init-not-called',
    'no-classmethod-decorator','no-staticmethod-decorator','no-self-use','bad-classmethod-argument',
    'bad-mcs-classmethod-argument','bad-mcs-method-argument','method-check-failed','invalid-bool-returned',
    'invalid-index-returned','invalid-repr-returned','invalid-str-returned','invalid-bytes-returned',
    'invalid-hash-returned','invalid-length-hint-returned','invalid-format-returned','invalid-getnewargs-returned',
    'invalid-getnewargs-ex-returned','super-with-arguments','deprecated-class','invalid-class-object',
    'unused-private-member',
]
